# ChangeLog for net-analyzer/wireshark
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.667 2014/11/13 00:23:07 jer Exp $

*wireshark-1.12.2 (13 Nov 2014)

  13 Nov 2014; Jeroen Roovers <jer@gentoo.org> -wireshark-1.12.1-r1.ebuild,
  +wireshark-1.12.2.ebuild:
  Version bump (bug #529100).

  11 Nov 2014; Jeroen Roovers <jer@gentoo.org> wireshark-1.12.1.ebuild,
  wireshark-1.12.1-r1.ebuild, wireshark-1.99.0-r1.ebuild,
  wireshark-99999999.ebuild:
  Depend on dev-qt/qtgui[accessibility] (bug #528806 by tux_mind).

*wireshark-1.12.1-r1 (06 Nov 2014)

  06 Nov 2014; Jeroen Roovers <jer@gentoo.org> +wireshark-1.12.1-r1.ebuild:
  Add Qt 5 support to the stable branch (bug #488640).

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> wireshark-1.12.1.ebuild,
  wireshark-1.99.0-r1.ebuild, wireshark-99999999.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

*wireshark-99999999 (30 Oct 2014)

  30 Oct 2014; Jeroen Roovers <jer@gentoo.org> -wireshark-1.99.0.ebuild,
  +wireshark-99999999.ebuild:
  Add live ebuild.

  27 Oct 2014; Mike Frysinger <vapier@gentoo.org> wireshark-1.12.1.ebuild,
  wireshark-1.99.0-r1.ebuild, wireshark-1.99.0.ebuild:
  Drop random perl deps in favor of blockers #455122.

*wireshark-1.99.0-r1 (24 Oct 2014)

  24 Oct 2014; Jeroen Roovers <jer@gentoo.org> +wireshark-1.99.0-r1.ebuild,
  +files/wireshark-1.99.0-qt5.patch:
  Add USE=qt5 (bug #488640).

  14 Oct 2014; Jeroen Roovers <jer@gentoo.org> wireshark-1.12.1.ebuild,
  wireshark-1.99.0.ebuild:
  Add virtual/freedesktop-icon-theme dependency (bug #525390).

*wireshark-1.99.0 (07 Oct 2014)

  07 Oct 2014; Jeroen Roovers <jer@gentoo.org> +wireshark-1.99.0.ebuild,
  -wireshark-1.99.0.1989.ebuild:
  Version bump.

*wireshark-1.99.0.1989 (03 Oct 2014)

  03 Oct 2014; Jeroen Roovers <jer@gentoo.org> -wireshark-1.99.0.1975.ebuild,
  +wireshark-1.99.0.1989.ebuild: