@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.667 2014/11/13 00:23:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.668 2014/11/13 01:09:21 jer Exp $
+
+  13 Nov 2014; Jeroen Roovers <jer@gentoo.org> wireshark-1.12.2.ebuild,
+  wireshark-1.99.0-r1.ebuild, wireshark-99999999.ebuild:
+  Clarify pkg_postinst() notice.
 
 *wireshark-1.12.2 (13 Nov 2014)
 
